--- a/src/assets/css/home/index/index.css
+++ b/src/assets/css/home/index/index.css
@@ -1,14 +1,14 @@
 .page{
-    padding-bottom: 3rem;
+    padding-bottom: 1.5rem;
 }
 .search-header{
-    height: 2.5rem;
+    height: 1rem;
     position: fixed;
     z-index: 10;
     left: 0;
     right: 0;
     top:0;
-    padding: 0 0.75rem;
+    padding: 0 0.3rem;
     background: linear-gradient(rgba(1, 1, 1, 0.2), rgba(255,255,255,0));
     display: flex;
     align-items: center;
@@ -18,38 +18,38 @@
     background: linear-gradient(rgba(235, 22, 37, 1), rgba(255,255,255,0))
 }
 .classify-icon{
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 0.6rem;
+    height: 0.6rem;
     text-align: center;
-    line-height: 1.5rem;
+    line-height: 0.6rem;
     color: #fff;
 
 }
 .classify-icon::before{
     content: '\e65a';
-    font-size: 1.5rem;
+    font-size: 0.6rem;
     font-family: "iconfont";
 }
 .search-wrap{
-    width: 100%;
-    height: 1.4rem;
+    flex:1;
+    height: 0.52rem;
     background-color: rgba(255,255,255,0.6);
     border-radius: 5px;
-    margin: 0 0.5rem;
+    margin: 0 0.4rem;
     box-sizing: border-box;
-    padding-left: 1.6rem;
+    padding-left: 0.65rem;
     padding-right: 0.5rem;
     position: relative;
 }
 .search-icon{
-    width:1rem ;
-    height: 1rem;
+    width:0.48rem ;
+    height: 0.48rem;
     position: absolute;
-    left: 0.4rem;
+    left: 0.14rem;
     top:50%;
     transform: translateY(-50%);
     text-align: center;
-    line-height: 1rem;
+    line-height: 0.48rem;
     color: #fff;
     font-style: normal;
     display: block;
@@ -57,23 +57,23 @@
 .search-icon::before{
     content: '\e628';
     font-family: "iconfont";
-    font-size: 1rem;
+    font-size: 0.3rem;
 }
 .search-text{
-    line-height: 1.4rem;
-    font-size: 0.6rem;
+    line-height: 0.52rem;
+    font-size: 0.28rem;
     color: #fff;
 }
 .login-wrap{
-    width:3.6rem;
+    width:0.5rem;
     text-align: center;
-    font-size: 0.8rem;
+    font-size: 0.28rem;
     white-space: nowrap;
     color: #fff;
 }
 .swiper-wrap{
     width: 100%;
-    height: 9.1rem;
+    height: 4.5rem;
     position: relative;
     z-index: 1;
     background-color: red;
@@ -86,28 +86,28 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 0.5rem;
+    margin-top: 0.25rem;
     background-color: #fff;
-    padding: 0.5rem;
+    padding: 0.25rem;
 }
 .quick-nav .item{
-    width: 3.5rem;
+    width: 1.7rem;
     text-align: center;
-    font-size: 0.8rem;
+    font-size: 0.32rem;
     color: #7b7f82;
 }
 .quick-nav .item::before{
     display: block;
     margin: 0 auto 0.2rem;
-    width: 2rem;
-    height: 2rem;
+    width: 1rem;
+    height: 1rem;
 
-    line-height: 2rem;
+    line-height: 1rem;
     background-color:#ffb709;
     border-radius: 100%;
     font-family: "iconfont";
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 0.6rem;
     content: '';
 }
 .quick-nav .item:nth-child(1)::before{
@@ -130,8 +130,8 @@
     margin-top: 0.5rem;
 }
 .goods-level-wrap .classify-title{
-    font-size: 0.7rem;
-    line-height: 1.6rem;
+    font-size: 0.32rem;
+    line-height: 0.8rem;
     text-align: center;
     border-bottom: 1px solid #efefef;
 }
@@ -150,14 +150,14 @@
 }
 .goods-level1-item0{
     width: 50%;
-    height: 7rem;
+    height: 3.5rem;
     border-right: 1px solid #efefef;
-    padding-right: 0.5rem;
-    padding-top: 0.5rem;
+    padding-right: 0.25rem;
+    padding-top: 0.25rem;
     position: relative;
     z-index: 1;
     box-sizing: border-box;
-    padding-left: 0.5rem;
+    padding-left: 0.25rem;
 }
 .goods-level1-item0:nth-child(2){
     border-right: 0 none;
@@ -169,9 +169,9 @@
 .goods-level1-item1 .goods-row{
     height: 50%;
     border-bottom: 1px solid #efefef;
-    padding-top: 0.5rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding-top: 0.25rem;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
@@ -183,15 +183,15 @@
     width: 65%;
 }
 .goods-level1-item1 .goods-row-title{
-    height: 1rem;
-    line-height: 1rem;
-    font-size: 0.7rem;
+    height: 0.5rem;
+    line-height: 0.5rem;
+    font-size: 0.3rem;
     overflow: hidden;
     font-weight: bold;
 }
 .goods-level1-item1 .goods-row-img{
-    width: 2.6rem;
-    height: 2.6rem;
+    width: 1.3rem;
+    height: 1.3rem;
 }
 .goods-level1-item1 .goods-row-img img{
     width: 100%;
@@ -200,62 +200,62 @@
     object-fit: cover;
 }
 .goods-level1-item1 .goods-row-text{
-    height: 1rem;
-    line-height: 1rem;
-    font-size: 0.6rem;
+    height: 0.5rem;
+    line-height: 0.5rem;
+    font-size: 0.28rem;
     color: #7b7f82;
 }
 .goods-level1-wrap .goods-info{
-   height: 1rem;
-    line-height: 1rem;
+   height: 0.5rem;
+    line-height: 0.5rem;
     display: flex;
 }
 .goods-level1-wrap .goods-title{
-    height: 1rem;
-    line-height: 1rem;
-    font-size: 0.7rem;
+    height: 0.5rem;
+    line-height: 0.5rem;
+    font-size: 0.32rem;
     overflow: hidden;
     font-weight: bold;
 }
 .goods-level1-wrap .goods-title2{
-    height: 1rem;
-    line-height: 1rem;
-    font-size: 0.7rem;
+    height: 0.5rem;
+    line-height: 0.5rem;
+    font-size: 0.32rem;
     overflow: hidden;
     font-weight: bold;
     text-align: center;
 }
 .goods-level1-wrap .goods-text{
-     font-size:0.6rem;
+     font-size:0.32rem;
      color:#cb385d;
      text-align: center;
  }
 .goods-level1-wrap .goods-text2{
-    font-size:0.6rem;
+    font-size:0.32rem;
     color:#7b7f82;
     text-align: center;
 }
 .goods-level1-wrap .goods-price1{
-    height: 1rem;
+    height: 0.5rem;
     background-color: #f21d4f;
     color: #fff;
-    font-size: 0.7rem;
-    padding: 0 0.2rem;
+    font-size:0.32rem;
+    padding: 0 0.1rem;
     border-radius: 10px;
-    margin-left: 1.5rem;
+    margin-left: 0.75rem;
 }
 .goods-level1-wrap .goods-price3{
-    height: 1rem;
+    height: 0.5rem;
     background-color: #5fc600;
     color: #fff;
-    font-size: 0.7rem;
-    padding: 0 0.2rem;
+    font-size: 0.32rem;
+    padding: 0 0.1rem;
     border-radius: 10px;
-    margin-left: 1.5rem;
+    margin-left: 0.75rem;
 }
 .goods-level1-wrap .goods-img{
-    height: 3.75rem;
-    margin-top: 0.2rem;
+    height: 1.7rem;
+    margin-top: 0.1rem;
     background-color: red;
 }
 .goods-level1-wrap .goods-img img{
@@ -265,9 +265,9 @@
     object-fit: cover;
 }
 .goods-level1-wrap .goods-img2{
-    width: 3rem;
-    height: 3.5rem;
-    margin: 0.2rem auto 0;
+    width: 1.5rem;
+    height: 1.75rem;
+    margin: 0.1rem auto 0;
 }
 .goods-level1-wrap .goods-img2 img{
     width: 100%;
@@ -281,7 +281,7 @@
 }
 .goods-list-warp .goods-list{
     width: 25%;
-    padding:0.5rem;
+    padding:0.25rem;
     border-right: 1px solid #efefef;
     box-sizing: border-box;
 }
@@ -290,16 +290,16 @@
 }
 .goods-list-warp .title{
     text-align: center;
-    height: 1rem;
-    line-height: 1rem;
-    font-size: 0.7rem;
+    height: 0.5rem;
+    line-height: 0.5rem;
+    font-size: 0.32rem;
     overflow: hidden;
     font-weight: bold;
 }
 .goods-list-warp .image{
     width: 100%;
     height: 0;
-    margin-top: 0.2rem;
+    margin-top: 0.1rem;
     padding-top: 100%;
     position: relative;
 }
@@ -314,20 +314,20 @@
 }
 
 .goods-list-warp .price{
-    font-size: 0.7rem;
+    font-size: 0.32rem;
     text-align: center;
-    margin-top: 0.2rem;
+    margin-top: 0.1rem;
     color: #d32a4e;
 }
 .goods-list-warp .unprice{
-    font-size: 0.6rem;
+    font-size: 0.3rem;
     text-align: center;
     color: #7b7f82;
     text-decoration:line-through;
 }
 
 .reco-title-warp{
-    height: 2.5rem;
+    height: 1.25rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -341,17 +341,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 2.5rem;
-    font-size: 0.8rem;
+    height: 1.25rem;
+    font-size: 0.28rem;
 }
 .reco-text-wrap::before{
-    font-size: 1rem;
+    font-size: 0.5rem;
     color: #FE6719;
     font-family: "iconfont";
     content: '\e7d1';
 }
 .reco-item-wrap{
-    padding: 0 0.25rem;
+    padding: 0 0.13rem;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -359,12 +359,12 @@
 .reco-item-wrap .reco-item{
     width: 50%;
     box-sizing: border-box;
-    padding: 0 0.25rem;
-    margin-bottom: 0.5rem;
+    padding: 0 0.13rem;
+    margin-bottom: 0.25rem;
 }
 .reco-item-wrap .reco-item .inner{
     background-color: #fff;
-    padding: 0.5rem;
+    padding: 0.25rem;
 }
 .reco-item-wrap .image{
     position: relative;
@@ -382,19 +382,19 @@
     object-fit: cover;
 }
 .reco-item-wrap .title{
-    line-height: 1rem;
-    height: 2rem;
+    line-height: 0.5rem;
+    height: 1rem;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
-    font-size: 0.7rem;
-    margin-top: 0.2rem;
+    font-size: 0.32rem;
+    margin-top: 0.1rem;
 }
 .reco-item-wrap .price{
-    font-size: 0.7rem;
+    font-size: 0.32rem;
     color: #d32a4e;
-    margin-top: 0.2rem;
+    margin-top: 0.1rem;
 }
