--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -8,21 +8,21 @@
     z-index: 99;
 }
 .search-page .search-header{
-    height: 2.5rem;
-    padding: 0 0.75rem;
+    height: 1rem;
+    padding: 0 0.3rem;
     border-bottom: 1px solid #efefef;
     background-color: #fff;
     display: flex;
     align-items: center;
 }
 .search-page .search-header .close{
-    width: 1rem;
-    height: 1rem;
+    width:0.5rem;
+    height: 0.5rem;
     color: #666;
-    line-height: 1rem;
+    line-height: 0.5rem;
     text-align: center;
     font-family: iconfont;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
 }
 .search-page .search-header .close::before{
     content: '\e638';
@@ -31,26 +31,26 @@
     flex: 1;
     display: flex;
     justify-content: space-between;
-    height: 1.4rem;
+    height: 0.7rem;
     border: 1px solid #b2b2b2;
     border-radius: 5px;
 }
 .search-page .search{
     width: 80%;
     vertical-align: top;
-    height: 1.4rem;
-    line-height: 1.4rem;
+    height: 0.7rem;
+    line-height: 0.7rem;
     background: none;
     box-sizing: border-box;
-    padding: 0 0.5rem;
-    font-size: 0.7rem;
+    padding: 0 0.25rem;
+    font-size: 0.32rem;
 }
 .search-page .btn-search{
-    width: 2.5rem;
-    height: 1.4rem;
-    font-size: 0.8rem;
+    width: 1rem;
+    height: 0.7rem;
+    font-size: 0.4rem;
     text-align: center;
-    line-height: 1.4rem;
+    line-height: 0.7rem;
     border: 0 none;
     vertical-align: top;
     background: none;
@@ -70,20 +70,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 1.6rem;
-    padding: 0 0.75rem;
+    height: 0.52rem;
+    padding: 0 0.3rem;
+    margin-top: 0.2rem;
 }
 .search-page .search-title{
-    font-size: 0.7rem;
+    font-size: 0.36rem;
 }
 .search-page .btn-delete{
-    width: 1.6rem;
-    height: 1.6rem;
+    width: 0.8rem;
+    height: 0.8rem;
     text-align: center;
-    line-height: 1.6rem;
+    line-height: 0.8rem;
     font-family: iconfont;
     color: #999;
-    font-size: 1rem;
+    font-size: 0.36rem;
 }
 .search-page .btn-delete::before{
     content: '\e626';
@@ -92,22 +93,22 @@
 
     display: flex;
     flex-wrap: wrap;
-    padding: 0 0.75rem 0 0.5rem;
+    padding: 0.1rem 0.3rem 0 0.25rem;
 }
 .search-page .search-keywords-wrap .keywords{
     width: 33.3333%;
     box-sizing: border-box;
-    padding: 0 0.25rem;
-    margin-top: 0.5rem;
+    padding: 0 0.12rem;
+    margin-top: 0.25rem;
 }
 .search-page .search-keywords-wrap .keywords .inner{
-    line-height: 1.2rem;
+    line-height: 0.6rem;
     border: 1px solid #efefef;
-    border-radius: 1.2rem;
+    border-radius: 0.6rem;
     background-color: #fff;
-    padding: 0 0.2rem;
+    padding: 0 0.1rem;
     white-space: nowrap;
     overflow: hidden;
-    font-size: 0.6rem;
+    font-size: 0.28rem;
     text-align: center;
 }
