--- a/src/assets/css/home/goods/search.css
+++ b/src/assets/css/home/goods/search.css
@@ -1,6 +1,6 @@
 .page{
     width: 100%;
-    background-color: #fff;
+    /*background-color: #fff;*/
 }
 .search-head{
     position: fixed;
@@ -57,7 +57,9 @@
     flex: 1;
     height: 0.6rem;
     line-height: 0.6rem;
-    background: none;
+}
+.search-header .search-text-null{
+    color: #999;
 }
 .search-header .btn-screen{
     font-size: 0.32rem;
@@ -86,7 +88,7 @@
     content: '\e6ce';
 }
 .order-main .order-item.active{
-    color:#fda208
+    color:#fda208;
 }
 .order-main .order-item:first-child.active::after{
     content: '\e619';
@@ -106,14 +108,16 @@
     border-bottom: 1px solid #efefef;
 }
 .order-main .order-menu li.active{
-    color:#fda208
+    color:#fda208;
 }
 .goods-main{
-    padding: 1.68rem 0.3rem 0;
+    padding: 1.68rem 0 0;
 }
 .goods-main .goods-list{
     display: flex;
-    padding-top: 0.3rem;
+    padding: 0.2rem 0.3rem;
+    border-bottom: 1px solid #efefef;
+    background-color: #fff;
 }
 .goods-main .image{
     width: 1.6rem;
@@ -128,9 +132,7 @@
 }
 .goods-main .goods-content{
     flex: 1;
-    padding-bottom: 0.1rem;
     padding-left: 0.2rem;
-    border-bottom: 1px solid #efefef;
 }
 .goods-main .goods-title{
     font-size: 0.28rem;
@@ -146,7 +148,138 @@
 .goods-main .price{
     font-size: 0.32rem;
     color: #f93036;
-    margin-top: 0.1rem;
+    margin-top: 0.05rem;
 }
 
+.goods-main .sales{
+    font-size: 0.24rem;
+    margin-top: 0.05rem;
+    color: #999;
+}
+.goods-main .sales span{
+    color:#fda208;
+}
+.mask{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top:0;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.5 );
+}
+.screen{
+    width: 80%;
+    height: 100%;
+    position: fixed;
+    transform: translateX(100%);
+    transition: all 0.3s;
+    right: 0;
+    top:0;
+    bottom: 0;
+    background-color: #fff;
+    z-index: 100;
+}
 
+.screen.move{
+    transform: translateX(0);
+}
+.screen.un-move{
+    transform: translateX(100%);
+}
+.screen .attr-wrap{
+    width: 100%;
+}
+.screen .attr-brand{
+    border-top:0.2rem solid #efefef;
+}
+.screen .attr-title-wrap{
+    height: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0.2rem;
+}
+.screen .attr-title-wrap .title{
+    flex: 1;
+}
+.screen .attr-title-wrap .price-input{
+    width: 1rem;
+    height: 0.44rem;
+    line-height: 0.44rem;
+    margin-right: 0.1rem;
+    box-sizing: border-box;
+    padding: 0 0.1rem;
+    font-size: 0.24rem;
+    border: 1px solid #efefef;
+}
+.screen .attr-title-wrap .price-line{
+    margin-right:0.1rem;
+    height: 1px;
+    width: 0.1rem;
+    background-color: #ccc;
+}
+.screen .attr-title-wrap::after{
+    font-size: 0.6rem;
+    color: #999;
+    font-family: iconfont;
+    content: '\e6ce';
+}
+.screen .attr-title-wrap.up::after{
+    content: '\e619';
+    color:#fda208;
+}
+.screen .item-wrap{
+    padding: 0 0.1rem;
+
+    border-bottom: 1px solid #efefef;
+
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+}
+.screen .item-wrap .item{
+    width: 33.3333%;
+    line-height: 0.64rem;
+    padding: 0 0.1rem;
+    margin-bottom: 0.2rem;
+    box-sizing: border-box;
+}
+
+.screen .item-wrap .item .inner{
+    display: block;
+    overflow: hidden;
+    text-align: center;
+    font-size: 0.28rem;
+    background-color: #efefef;
+}
+.screen .item-wrap .item.active .inner{
+    background-color: #fda208;
+    color: #fff;
+}
+.screen .handel-wrap{
+    height: 1rem;
+    line-height: 1rem;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    border-top:1px solid #efefef;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color:#fff;
+    font-size: 0.28rem;
+}
+.screen .handel-wrap .item{
+    flex:1;
+}
+.screen .handel-wrap .item span{
+    color: #fda208;
+}
+.screen .handel-wrap .item:nth-child(2){
+    background-color: #efefef;
+}
+.screen .handel-wrap .item:nth-child(3){
+    background-color: #fda208;
+    color: #fff
+}
