--- a/src/assets/css/common/public.css
+++ b/src/assets/css/common/public.css
@@ -1,4 +1,5 @@
-*{margin: 0; padding: 0;touch-action: pan-y;}
+*{margin: 0; padding: 0;}
+
 ul,li{list-style-type: none;}
 input{outline: none;border-radius: 0;border:0 none;}
 html,body {
@@ -10,6 +11,7 @@ html,body {
     background-color: #f5f5f9;
     color: #333;
 }
+
 /*@media screen and (min-width: 320px) {*/
 /*    html,body {*/
 /*        font-size: 17.06px!important;*/
