--- a/src/assets/css/home/goods/details.css
+++ b/src/assets/css/home/goods/details.css
@@ -1,11 +1,17 @@
 .detail-header{
     background-color: #fff;
+    width: 100%;
     height: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-left: 0.2rem;
     padding-right: 0.3rem;
+    position: fixed;
+    left: 0;
+    top:0;
+    z-index: 10;
+    box-sizing: border-box;
 }
 .detail-header .back{
     width: 0.6rem;
@@ -64,3 +70,4 @@
     right:0;
     top:0.05rem;
 }
+
