--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -16,16 +16,17 @@
     align-items: center;
 }
 .search-page .search-header .close{
-    width:0.5rem;
-    height: 0.5rem;
+    width:0.6rem;
+    height: 0.6rem;
     color: #666;
-    line-height: 0.5rem;
+    line-height: 0.6rem;
+    font-size: 0.6rem;
     text-align: center;
     font-family: iconfont;
     margin-right: 0.5rem;
 }
 .search-page .search-header .close::before{
-    content: '\e638';
+    content: '\e60a';
 }
 .search-page .search-header .search-wrap{
     flex: 1;
