--- a/src/assets/css/home/balance/index.css
+++ b/src/assets/css/home/balance/index.css
@@ -55,3 +55,90 @@
     background: linear-gradient(45deg, #cc95c0 25%, #dbd4b4 0, #dbd4b4 50%, #cc95c0 0, #cc95c0 75%, #dbd4b4 0);
     background-size: 0.4rem 0.4rem;
 }
+.goods-wrap{
+    overflow: hidden;
+}
+.goods-wrap .goods-list{
+    padding: 0.2rem 0.3rem;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #efefef;
+}
+.goods-wrap .image{
+    width: 1.2rem;
+    height: 1.2rem;
+    margin-right: 0.2rem;
+    background-color: #b5b5b5;
+}
+.goods-wrap .image img{
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+}
+.goods-wrap .goods-param{
+    flex:1;
+    overflow: hidden;
+    font-size: 0.28rem;
+}
+.goods-wrap .goods-param .title{
+    height: 0.4rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.goods-wrap .goods-param .attr{
+    font-size: 0.24rem;
+    color: #999;
+}
+.goods-wrap .goods-param .attr span:first-child{
+    margin-right: 0.3rem;
+}
+.goods-wrap .goods-param .amount{
+    font-size: 0.24rem;
+    color: #999;
+}
+.goods-wrap .goods-param .price{
+    color: #f51d2a;
+}
+.total-wrap{
+    display: flex;
+    margin-top: 0.2rem;
+    justify-content: space-between;
+    font-size: 0.32rem;
+    padding: 0 0.3rem;
+}
+.total-wrap span{
+    color: #f51d2a;
+}
+.total-wrap span:first-child{
+    color: #666;
+}
+.balance-wrap{
+    width: 100%;
+    height: 1rem;
+    line-height: 1rem;
+    border-top:1px solid #efefef;
+    display: flex;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 5;
+}
+.balance-wrap .price-wrap{
+    flex: 2;
+    text-align: right;
+    padding-right: 0.2rem;
+}
+.balance-wrap .price-wrap span:nth-child(2){
+    color: #f51d2a;
+}
+.balance-wrap .btn-balance{
+    flex: 1;
+    background-color: #cc0004;
+    font-size: .32rem;
+    color: #fff;
+    text-align: center;
+}
+
+
