--- a/src/assets/css/user/myorder/order.css
+++ b/src/assets/css/user/myorder/order.css
@@ -81,6 +81,8 @@
 .order-list .status-wrap .btn-status{
     padding: 0 0.1rem;
     height: 0.52rem;
+    box-sizing: border-box;
+    min-width: 1.32rem;
     line-height: 0.52rem;
     text-align: center;
     background-color: #f51d2a;
@@ -88,6 +90,9 @@
     font-size: 0.28rem;
     border-radius: 5px;
     margin-left: 0.2rem;
+}
+.order-list .status-wrap .btn-gray{
+    background-color: #999;
 }
 .order-list .status-wrap .btn-status:first-child{
     margin-left: 0;
