--- a/src/assets/css/user/myorder/detail.css
+++ b/src/assets/css/user/myorder/detail.css
@@ -72,6 +72,12 @@
     background-color: #b5b5b5;
     margin-right: 0.2rem;
 }
+.goods-list .image img{
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+}
 .goods-list .info-wrap{
     flex: 1;
     overflow: hidden;
@@ -88,6 +94,12 @@
 .goods-list .attr{
     margin-top: 0.1rem;
     font-size: 0.24rem;
+}
+.goods-list .attr span{
+    margin-left: 0.2rem;
+}
+.goods-list .attr span:first-child{
+    margin-left: 0;
 }
 .goods-list .price{
     margin-left: 0.2rem;
