--- a/src/assets/css/user/myorder/order.css
+++ b/src/assets/css/user/myorder/order.css
@@ -9,7 +9,6 @@
 }
 .order-list .number-wrap{
     height: 0.8rem;
-    border-bottom: 1px solid #efefef;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -23,11 +22,15 @@
 .order-list .status{
     font-size: 0.28rem;
 }
+.order-list .list-wrap{
+    padding: 0.2rem 0;
+    border-top: 1px solid #efefef;
+}
+
 .order-list .item-wrap{
     display: flex;
-    padding: 0.2rem 0;
     justify-content: space-between;
-    border-bottom: 1px solid #efefef;
+
 }
 .order-list .image{
     width: 1.2rem;
@@ -65,6 +68,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-top:1px solid #efefef;
 }
 .order-list .total{
     font-size: 0.28rem;
@@ -98,5 +102,6 @@
     margin-left: 0;
 }
 .order-list .review-wrap{
+    border-top:0 none;
     justify-content: flex-end;
 }
