--- a/src/assets/css/user/mobile/index.css
+++ b/src/assets/css/user/mobile/index.css
@@ -83,6 +83,10 @@
     padding: 0 0.2rem;
     line-height: 0.8rem;
 }
+.password-input input{
+    width: 100%;
+    height: 100%;
+}
 .password-item .eyes{
     width: 1.2rem;
     height: 0.8rem;
